bluec-tests/tests/invalid/types_pointer/cast_expression_to_fn_type.c
int main(void) {
    (int (void)) 0;
    return 0;
}